--- a/app/templates/settings/firstrun.html
+++ b/app/templates/settings/firstrun.html
@@ -6,7 +6,7 @@
 	<p>Create a user to protect your settings and maintenance tasks. You can add more users later.</p>
 	
 	<div class="form">
-		<form method="POST" action="/settings/firstrun">
+		<form method="POST" action="{{ url_for('settings.first_run') }}">
 			{{ form.csrf_token }}
 			{{ render_field(form.username) }}
 			{{ render_field(form.password) }}
