--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,56 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		{% if title %}
 			<title>{{ title }} | youtube-dl-web-viewer</title>
 		{% else %}
 			<title>youtube-dl-web-viewer</title>
 		{% endif %}
-	<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename = 'style.css') }}">
+	<script>
+		var csrf_token = "{{ csrf_token() }}";
+		var api_url = "/api";
+		
+		// set up xhr
+	</script>
 	</head>
 	
 	<body>
-		<div id="container">
+		<div class="container">
 			<header>
 				<h1>yt-dl web</h1>
-			</header>
-			{% if g.user %}
-				<nav id="user">
-					<ul>
-						<li><a href="{{ url_for('settings.user') }}">{{ g.user['username'] }}</a></li>
-						<li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
-					</ul>
-				</nav>
-				{% if g.user['is_admin'] == 1 %}
-					<nav id="navigation">
+				{% if g.user %}
+					<nav class="user">
 						<ul>
+							<li><a href="{{ url_for('settings.user') }}">{{ g.user['username'] }}</a></li>
+							<li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+						</ul>
+					</nav>
+					{% if g.user['is_admin'] == 1 %}
+						<nav class="navigation">
+							<ul>
 							{% for item in nav.top %}
 								<li class="{{ 'active' if item.is_active }}">
 									<a href="{{ item.url }}">{{ item.label }}</a>
 								</li>
-							{% endfor %}	
+							{% endfor %}
+							</ul>
+						</nav>
+					{% endif %}
+				{% else %}
+					<nav class="user">
+						<ul>
+							<li><a href="{{ url_for('auth.login') }}">Login</a></li>
 						</ul>
 					</nav>
 				{% endif %}
-			{% else %}
-				<nav id="user">
-					<ul>
-						<li><a href="{{ url_for('auth.login') }}">Login</a></li>
-					</ul>
-				</nav>
-			{% endif %}
-						
+			</header>
+			
 			{% with messages = get_flashed_messages() %}
 				{% if messages %}
-					<section id="messagaes">
+					<section class="messages">
 					{% for message in messages %}
-						<div>{{ message }}</div>
+						<div class="message">
+							{{ message }}
+							<button class="close" aria-label="Dismiss">X</button>
+						</div>
 					{% endfor %}
 					</section>
 				{% endif %}
 			{% endwith %}
 			
-			<section id="content">
+			<section class="content">
 				{% block content %}{% endblock %}
 			</section>
 		</div>
