--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,11 +2,14 @@
 {% from 'macros.html' import render_field %}
 
 {% block content %}
-	<h2>{{ title }}</h2>
-	<form method="POST" action="{{ url_for('auth.login') }}">
-		{{ form.csrf_token }}
-		{{ render_field(form.username) }}
-		{{ render_field(form.password) }}
-		<input name="submit" type="submit" value="Login">
-	</form>
+	<div class="full-width">
+		<h2>{{ title }}</h2>
+		
+		<form method="POST" action="{{ url_for('auth.login') }}">
+			{{ form.csrf_token }}
+			{{ render_field(form.username) }}
+			{{ render_field(form.password) }}
+			<input name="submit" type="submit" value="Login">
+		</form>
+	</div>
 {% endblock %}
