--- a/app/templates/settings/general.html
+++ b/app/templates/settings/general.html
@@ -4,29 +4,26 @@
 {% block content %}
 	<div class="full-width">
 		<h2>{{ title }}</h2>
-		
-		<div class="form">
-			<form method="POST" action="{{ url_for('settings.general') }}">
-				{{ form.csrf_token }}
-				{{ render_field(form.refresh_interval) }}
-				<div class="field_help">(set 0 to disable) Refresh the database if it is older than x seconds (can also use 10m, 12h, 3d, 1w etc for minutes/hours/days/weeks)</div>
-				{{ render_field(form.disk_path) }}
-				<div class="field_help">Path must exist. Subfolders will be treated as playlists. You can move your videos and update this path without a database rescan.</div>
-				{{ render_field(form.web_path) }}
-				<div class="field_help">Also thumbnails and subtitles. HTTP basic auth user/password can be supplied like https://user:password@example.com/videos/</div>
-				{{ render_field(form.metadata_source) }}
-				<div class="field_help">json falls back to filename if missing, requires database rescan to update existing video metadata</div>
-				{{ render_field(form.filename_format) }}
-				<div class="field_help">(leave blank to disable) See below for help</div>
-				{{ render_field(form.filename_delimiter) }}
-				<div class="field_help">(optional) Include spaces, see below for help</div>
-				{{ render_field(form.replace_underscores) }}
-				<div class="field_help">Looks nicer imo if you use youtube-dl's <pre>--restrict-filenames</pre> option</div>
-				{{ render_field(form.guests_can_view) }}
-				<div class="field_help">If checked, videos are publicly viewable. Does not protect video URLs or HTTP basic auth username/password. Guests cannot access settings or refresh/rescan the database.</div>
-				<input name="submit" type="submit" value="Update">
-			</form>
-		</div>
+		<form class="grid-form" method="POST" action="{{ url_for('settings.general') }}">
+			{{ form.csrf_token }}
+			{{ render_field(form.refresh_interval) }}
+			<div class="field-help">(set 0 to disable) Refresh the database if it is older than x seconds (can also use 10m, 12h, 3d, 1w etc for minutes/hours/days/weeks)</div>
+			{{ render_field(form.disk_path) }}
+			<div class="field-help">Path must exist. Subfolders will be treated as playlists. You can move your videos and update this path without a database rescan.</div>
+			{{ render_field(form.web_path) }}
+			<div class="field-help">Also thumbnails and subtitles. HTTP basic auth user/password can be supplied like https://user:password@example.com/videos/</div>
+			{{ render_field(form.metadata_source) }}
+			<div class="field-help">json falls back to filename if missing, requires database rescan to update existing video metadata</div>
+			{{ render_field(form.filename_format) }}
+			<div class="field-help">(leave blank to disable) See below for help</div>
+			{{ render_field(form.filename_delimiter) }}
+			<div class="field-help">(optional) Include spaces, see below for help</div>
+			{{ render_field(form.replace_underscores) }}
+			<div class="field-help">Looks nicer imo if you use youtube-dl's <pre>--restrict-filenames</pre> option</div>
+			{{ render_field(form.guests_can_view) }}
+			<div class="field-help">If checked, videos are publicly viewable. Does not protect video URLs or HTTP basic auth username/password. Guests cannot access settings or refresh/rescan the database.</div>
+			<input name="submit" type="submit" value="Update">
+		</form>
 		
 		<div>
 			# refresh/rescan/clear buttons
@@ -46,7 +43,7 @@
 			<dt>Paths</dt>
 			<dd>You need to provide two paths: a folder path on disk which will be scanned for videos, and a base URL where they can be accessed over the web.</dd>
 			<dd>Disk path: e.g. <pre>/home/user/videos/</pre>. If the path contains subfolders, they will be treated as separate playlists. Thumbnails and metadata .json files, if they exist, will be searched for in the same folder as their associated videos and matched by filename. Nesting is currently not supported, so any nested subfolders will just appear as separate playlists.</dd>
-			<dd>Web path: e.g. <pre>https://example.com/videos/. This script does not host the video files themselves, so you should set up your webserver separately to serve your disk path. It combines the web path with the subfolder and filename to form URLs for the videos and thumbnails. For example, if the <pre>/home/user/videos</pre> directory contained a video at <pre>playlist 1/video.mp4</pre> and your web path was <pre>https://example.com/content/</pre>, the URL formed would be <pre>https://example.com/content/playlist%201/video.mp4</pre>. The simplest way to serve your disk path to the web is to create a symlink in your public_html folder, for example:</dd>
+			<dd>Web path: e.g. <pre>https://example.com/videos/</pre>. This script does not host the video files themselves, so you should set up your webserver separately to serve your disk path. It combines the web path with the subfolder and filename to form URLs for the videos and thumbnails. For example, if the <pre>/home/user/videos</pre> directory contained a video at <pre>playlist 1/video.mp4</pre> and your web path was <pre>https://example.com/content/</pre>, the URL formed would be <pre>https://example.com/content/playlist%201/video.mp4</pre>. The simplest way to serve your disk path to the web is to create a symlink in your public_html folder, for example:</dd>
 			<dd><pre>ln -s /home/user/videos /var/www/public_html/videos</pre></dd>
 			<dd>Bear in mind the user your webserver is running as will require read access to the path and its contents to be able to serve videos.</dd>
 			<dt>Metadata source</dt>
@@ -61,7 +58,7 @@
 					<li><pre>{skip}</pre>: Skip a parameter not recognised by this script</li>
 				</ul>
 			</dd>
-			<dd>Use the <strong>video filename delimiter</strong> to specify how your parameters are separated, including spaces (e.g. <pre> - </pre>). Since video titles could contain your delimiter string, if you include <pre>{title}</pre> in your format template, the parser will first try to match the other parameters to the left and right of the title, leaving what remains as the video title. This is likely to break with some filename formats, so I recommend you download .json metadata along with your videos!</dd>
+			<dd>Use the <strong>video filename delimiter</strong> to specify how your parameters are separated, including spaces (e.g. "<pre> - </pre>"). Since video titles could contain your delimiter string, if you include <pre>{title}</pre> in your format template, the parser will first try to match the other parameters to the left and right of the title, leaving what remains as the video title. This is likely to break with some filename formats, so I recommend you download .json metadata along with your videos!</dd>
 		</dl>
 	</div>
 {% endblock %}
