--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,5 @@
 {% macro render_field(field) %}
-	<div class="form_field">
-		{{ field.label }}:
+		{{ field.label }}
 		{{ field(**kwargs) }}
 		{% if field.errors %}
 			<ul class="errors">
@@ -9,7 +8,6 @@
 			{% endfor %}
 			</ul>
 		{% endif %}
-	</div>
 {% endmacro %}
 
 {% macro error_list(form) %}
